feat: added integration with contentful and created hero images

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
 VITE_SUPABASE_PROJECT_ID=
 VITE_SUPABASE_PUBLISHABLE_KEY=
 VITE_SUPABASE_URL=
+
+# Contentful CMS Configuration
+# Get these values from https://app.contentful.com/
+# Space Settings > API keys
+VITE_CONTENTFUL_SPACE_ID=your_space_id_here
+VITE_CONTENTFUL_ACCESS_TOKEN=your_content_delivery_api_token_here
+VITE_CONTENTFUL_PREVIEW_TOKEN=your_preview_api_token_here
+VITE_CONTENTFUL_ENVIRONMENT=master
