--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ VITE_CONTENTFUL_SPACE_ID=your_space_id_here
 VITE_CONTENTFUL_ACCESS_TOKEN=your_content_delivery_api_token_here
 VITE_CONTENTFUL_PREVIEW_TOKEN=your_preview_api_token_here
 VITE_CONTENTFUL_ENVIRONMENT=master
+VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key
