--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@pqina/pintura": "^8.95.1",
+    "@pqina/react-pintura": "^9.0.4",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
