--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@react-google-maps/api": "^2.20.7",
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.83.0",
     "algoliasearch": "^5.42.0",
@@ -57,11 +56,13 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
+    "mapbox-gl": "^3.5.1",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.63.0",
+    "react-map-gl": "^7.1.8",
     "react-instantsearch": "^7.17.0",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
